--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -24,19 +24,18 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         
         <script>
+            // runs at load
             $(document).ready(function() {
-                // fetch all room status
                 $.ajax({
                     // url for API request which gets all data from database
                     url: 'http://localhost:5000/api/all',
                     type: 'GET',
-                    // result contains the info fetched by api
-                    success: function(result) {
+                    success: function(result) { // result contains the info fetched by api
                         for (const [i, status] of Object.entries(result)) {
                             var roomId = status[0];
                             var roomStatus = status[1];
                             roomButton = document.getElementById(roomId);
-                            console.log(roomStatus);
+                            console.log(roomStatus); // testing if room status was retrieved correctly
                             if (roomStatus == 1) {
                                 roomButton.style.backgroundColor = 'red';
                             } else {
