--- a/Sidebar/sidebar.css
+++ b/Sidebar/sidebar.css
@@ -11,7 +11,7 @@
     left: 0;
     height: 100vh;
     width: 80px;
-    background-color: maroon;
+    background-color:red;
     color: white;
     padding: 0.4rem 0.8rem;
     transition: all 0.5s ease;
@@ -99,7 +99,7 @@
 }
 
 .sidebar .nav-item {
-    opacity: 0;
+    opacity: 0.4;
 }
 
 .sidebar.active .nav-item {
