--- a/main-page/example/landing.css
+++ b/main-page/example/landing.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-image: url(liquid-background.jpeg);
+    background-image: url(EarlhamCampus.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
